<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LobbyFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Lobby_join_explain"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateLobby" />

    <TextView
        android:id="@+id/tvExplainCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lobby_create_explain"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glTitel"
        android:padding="10dp"
        />

    <de.pbma.moa.airhockey.CustomButton
        android:id="@+id/btnJoinLobby"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_beitreten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_pixel"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <de.pbma.moa.airhockey.CustomButton
        android:id="@+id/btnCreateLobby"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_pixel"
        android:text="@string/lobby_erstellen"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExplainCreate" />

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:shadowColor="@color/Neonpink"
        android:shadowRadius="3"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/glTitel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


    <TextView
        android:id="@+id/tvTurnierInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Hier kommt man in ein das Turnier Untermenü"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoinLobby" />

    <de.pbma.moa.airhockey.CustomButton
        android:id="@+id/btnTurnier"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_pixel"
        android:text="Turnier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTurnierInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>